fix(i18n): 修复 lang 文件被 datagen 覆盖导致大面积显示键名
原因: build.gradle 的 duplicatesStrategy=INCLUDE 让残缺的 datagen lang
      (仅 8 键) 覆盖了手写完整版 (130+ 键)，导致游戏内 GUI/物品/消息
      全部显示为翻译键名而非本地化文本，英文环境同样异常。
内容:
- build.gradle: duplicatesStrategy 由 INCLUDE 改为 EXCLUDE，
  确保手写资源优先于 datagen 产物
- ModDataGen: 移除 LanguageProvider 注册，语言文件统一手写维护
- 删除 ModEnUsLanguageProvider / ModZhCnLanguageProvider
- TerritoryRole/FlagType/FlagCategory: 三个枚举改为返回翻译键
  (getTranslationKey)，移除硬编码中文字段，英文客户端不再显示中文
- TerritoryTableScreen: 标签名/字段名/状态文字全部改为
  Component.translatable，补充约 25 个 territory.gui.field.* 键
- 删除 FlagType.MACRO_FLAGS 死代码字段
影响: jar 内 lang/en_us.json 从 9 行恢复为 177 行完整版，
      所有 GUI 文本与消息恢复本地化显示